apptestehttp/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  name: my-httpd
spec:
  replicas: 1
  selector:
    deployment-config.name: my-httpd
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment-config.name: my-httpd
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/httpd
        name: default-container
        resources: {}
  test: false
  triggers: null
