apptestehttp/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: my-httpd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment-config.name: my-httpd
