apptestehttp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: my-httpd
spec:
  host: gitops-teste.apps.ocp4.techlead.local
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: my-httpd
    weight: null
